[project]
name = "ml2mqtt"
version = "0.1.0"
description = "MQTT-backed machine learning service with a Flask UI"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "jinja2>=3.1,<4.0",
    "numpy>=1.26,<3.0",
    "paho-mqtt>=2.1,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "scikit-learn-intelex>=2024.0",
    "waitress>=3.0,<4.0",
]

[tool.uv]
package = false

[[tool.mypy.overrides]]
module = ["paho.*", "pandas.*", "numpy.*", "sklearn.*", "flask.*"]
ignore_missing_imports = true
